--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" th:href="@{/style.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/global.css}">
 <h1 th:text="${question.subject}"></h1>
 <div th:text="${question.content}"></div>
 <h5 th:text="|${#lists.size(question.answerList)} 개의 답변이 있습니다.|"></h5>
